@@ -24,7 +24,7 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  *
- * $Id: libdwarf.h 3061 2014-06-02 00:42:41Z kaiwang27 $
+ * $Id: libdwarf.h 3064 2014-06-06 19:35:55Z kaiwang27 $
  */
 
 #ifndef	_LIBDWARF_H_
@@ -517,6 +517,7 @@ int		dwarf_attr(Dwarf_Die, Dwarf_Half, Dwarf_Attribute *,
 		    Dwarf_Error *);
 int		dwarf_attrlist(Dwarf_Die, Dwarf_Attribute **,
 		    Dwarf_Signed *, Dwarf_Error *);
+int		dwarf_attroffset(Dwarf_Attribute, Dwarf_Off *, Dwarf_Error *);
 int		dwarf_attrval_flag(Dwarf_Die, Dwarf_Half, Dwarf_Bool *,
 		    Dwarf_Error *);
 int		dwarf_attrval_signed(Dwarf_Die, Dwarf_Half, Dwarf_Signed *,
