@@ -1,3 +1,8 @@
+Sat Jun  7 17:39:52 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Sync'd with
+	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3067
+
 Tue Jun  3 18:44:57 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* current-trunk: Merged from upstream-trunk.
